--- a/assets/cs/style.css
+++ b/assets/cs/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('tu-imagen-de-fondo.jpg'); /* Reemplaza 'tu-imagen-de-fondo.jpg' con la ruta de tu imagen de fondo */
+    background-image: url('https://i.ytimg.com/vi/obJOMFWOUFk/maxresdefault.jpg'); /* Reemplaza 'tu-imagen-de-fondo.jpg' con la ruta de tu imagen de fondo */
     background-size: cover;
     color: #fff; /* Cambia el color del texto según sea necesario */
     font-family: 'Arial', sans-serif; /* Cambia la fuente del texto según sea necesario */
